--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,11 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
-        applicationId "com.simplemobiletools.filemanager.pro"
+        applicationId "com.github.zhangxiangdong.filemanager"
         minSdkVersion 21
         targetSdkVersion 33
-        versionCode 127
-        versionName "6.14.2"
+        versionCode 1
+        versionName "0.0.1"
         multiDexEnabled true
         setProperty("archivesBaseName", "file-manager")
         vectorDrawables.useSupportLibrary = true
@@ -49,8 +49,7 @@ android {
     flavorDimensions "variants"
     productFlavors {
         core {}
-        fdroid {}
-        prepaid {}
+        paid {}
     }
 
     sourceSets {
@@ -64,7 +63,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.SimpleMobileTools:Simple-Commons:2e9ca234a7'
+    implementation 'com.github.zhangxiangdong:Simple-Commons:05389c7882'
     implementation 'com.github.tibbi:AndroidPdfViewer:da57ff410e'
     implementation 'com.github.Stericson:RootTools:df729dcb13'
     implementation 'com.github.Stericson:RootShell:1.6'
