--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,7 @@ android {
 }
 
 dependencies {
-    implementation 'com.github.zhangxiangdong:commons:5.34.26-wl-SNAPSHOT'
+    implementation('com.github.zhangxiangdong:commons:5.34.26-wl-SNAPSHOT') { changing true }
     implementation 'com.github.tibbi:AndroidPdfViewer:da57ff410e'
     implementation 'com.github.Stericson:RootTools:df729dcb13'
     implementation 'com.github.Stericson:RootShell:1.6'
